// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shoud renders for "linux" correctly 1`] = `
<Fragment>
  <h4
    className="huge-spacer-top spacer-bottom"
  >
    onboarding.analysis.build_wrapper.execute
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    onboarding.analysis.build_wrapper.execute_text
  </p>
  <CodeSnippet
    snippet="build-wrapper-linux-x86-64 --out-dir bw-output onboarding.analysis.build_wrapper.execute_build_command"
  />
  <p
    className="big-spacer-top markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.build_wrapper.docs"
      id="onboarding.analysis.build_wrapper.docs"
      values={
        {
          "link": <withAppStateContext(DocLink)
            to="/analyzing-source-code/languages/c-family/"
          >
            onboarding.analysis.build_wrapper.docs_link
          </withAppStateContext(DocLink)>,
        }
      }
    />
  </p>
</Fragment>
`;

exports[`Shoud renders for "mac" correctly 1`] = `
<Fragment>
  <h4
    className="huge-spacer-top spacer-bottom"
  >
    onboarding.analysis.build_wrapper.execute
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    onboarding.analysis.build_wrapper.execute_text
  </p>
  <CodeSnippet
    snippet="build-wrapper-macosx-x86 --out-dir bw-output onboarding.analysis.build_wrapper.execute_build_command"
  />
  <p
    className="big-spacer-top markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.build_wrapper.docs"
      id="onboarding.analysis.build_wrapper.docs"
      values={
        {
          "link": <withAppStateContext(DocLink)
            to="/analyzing-source-code/languages/c-family/"
          >
            onboarding.analysis.build_wrapper.docs_link
          </withAppStateContext(DocLink)>,
        }
      }
    />
  </p>
</Fragment>
`;

exports[`Shoud renders for "win" correctly 1`] = `
<Fragment>
  <h4
    className="huge-spacer-top spacer-bottom"
  >
    onboarding.analysis.build_wrapper.execute
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    onboarding.analysis.build_wrapper.execute_text
  </p>
  <CodeSnippet
    snippet="build-wrapper-win-x86-64.exe --out-dir bw-output onboarding.analysis.build_wrapper.execute_build_command"
  />
  <p
    className="big-spacer-top markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.build_wrapper.docs"
      id="onboarding.analysis.build_wrapper.docs"
      values={
        {
          "link": <withAppStateContext(DocLink)
            to="/analyzing-source-code/languages/c-family/"
          >
            onboarding.analysis.build_wrapper.docs_link
          </withAppStateContext(DocLink)>,
        }
      }
    />
  </p>
</Fragment>
`;
